--- a/SocialNetwork.Contracts/SocialNetwork.Contracts.csproj
+++ b/SocialNetwork.Contracts/SocialNetwork.Contracts.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SocialNetwork.Data\SocialNetwork.Data.csproj" />
+  </ItemGroup>
+
 </Project>
